# haskell-debug-adapter-test

./: CHANGELOG.md  haskell-dap-test.cabal
app/: Main.hs
src/: MyLib1.hs  MyLib2.hs
