cabal-version:      2.4
name:               haskell-dap-test
version:            0.1.0.0
author:             forestaa
maintainer:         t.daichi.3@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MyLib1
        MyLib2
    default-extensions:
        GADTs
    build-depends:
        base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-dap-test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        haskell-dap-test
    hs-source-dirs:   app
    default-language: Haskell2010
