cabal-version:      2.4
name:               haskell-dap-test
version:            0.1.0.0
author:             forestaa
maintainer:         t.daichi.3@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MyLib1
        MyLib2
    default-extensions:
        OverloadedRecordDot
    build-depends:
        base
    hs-source-dirs:   src
    default-language: Haskell2010
    -- default-language: GHC2021

executable haskell-dap-test
    main-is:          Main.hs
    build-depends:
        base,
        haskell-dap-test
    hs-source-dirs:   app
    default-language: Haskell2010
    -- default-language: GHC2021
